--- a/关于VPP.html
+++ b/关于VPP.html
@@ -250,7 +250,7 @@ div.tocify {
 
 
 <h1 class="title toc-ignore">VPP学习</h1>
-<h4 class="author"><em>liujia</em></h4>
+<h4 class="author"><em>说明： 本文章内容大量摘取于网络，如有原作者要求删除，请联系jialejiahi@163.com</em></h4>
 <h4 class="date"><em>2018年3月1日</em></h4>
 
 </div>
