--- a/关于2018年报考与其它.html
+++ b/关于2018年报考与其它.html
@@ -399,13 +399,13 @@ blockquote {
 如果有一颗做学术的心，那学校的选择除了本科生教育实力之外，还要注重研究生教育实力，注重学校的科研实力。相对的，就业啊，城市产业发展状况这些就可以少考虑些。</p>
 <h2 id="%E8%87%AA%E8%BA%AB%E5%AE%9E%E5%8A%9B%E5%AE%9A%E4%BD%8D">自身实力定位</h2>
 <p>高考分数已经出来了，填报志愿之前，首先要明确的就是自己的实力定位。2018年山东理科夏季高考人数28万左右，大约与去年持平，参照下面的一分一段表：<br>
-<a href="/pics/2018.png">2018年1分1段表</a><br>
+<a href="./pics/2018.png">2018年1分1段表</a><br>
 只有这个表还不够选学校，还要知道前面两年的一分一段表，毕竟各大高校只有往年的录取数据。 2017年山东理工高考人数27.5万左右，与2018年类似，参照下面的一分一段表：<br>
-<a href="/pics/2017.jpg">2017年1分1段表</a><br>
+<a href="./pics/2017.jpg">2017年1分1段表</a><br>
 对比这两份表格发现，同等名次，2018年的分数要比2017年高6分左右。同等分数，2018年名次要比2017年落后5000名左右。 各大高校2017年的录取情况是最有参考意义的， 把2017年各大高校的分数线加6分卡今年自己的分数是比较靠谱的。  由于一年的成绩比较有随机性，我们再看看2016年的数据。2016年的理科高考人数没查到具体数据，应该比2017年和2018年略多。
 而2016年的试题难度应该比2017年和2018年略微简单，我们看在35000名左右的一分一段表。<br>
-<a href="/pics/201601.jpg">2016年1分1段表1</a><br>
-<a href="/pics/201602.jpg">2016年1分1段表2</a><br>
+<a href="./pics/201601.jpg">2016年1分1段表1</a><br>
+<a href="./pics/201602.jpg">2016年1分1段表2</a><br>
 对比可见，把2016年各大高校的分数线减去12分，卡18年的分数线合适，减去18分卡2017年的分数合适。
 各大高校2016年的招收分数，应该比2017年高20分左右，可以验证我们的计算。</p>
 <h2 id="%E5%8F%AF%E9%80%89%E7%9A%84%E5%AD%A6%E6%A0%A1">可选的学校</h2>
