--- a/about_2018_gaokao.html
+++ b/about_2018_gaokao.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>关于2018年报考与其它.md</title>
-<meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+<meta http-equiv="Content-type" content="text/html;charset=UTF-8"/>
+<title>关于2018年报考与其它</title>
 
 <style>
 /*---------------------------------------------------------------------------------------------
