--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>页面列表</h1>
-<a href="./关于VPP.html">关于VPP</a> <br/>
-<a href="./关于2018年报考与其它">关于2018年报考与其它</a>
-</body>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+		<title>liujia的小站</title>
+	</head>
+	<body>
+		<a href="./about_vpp.html">关于VPP</a> <br/>
+		<a href="./about_2018_gaokao.html">关于2018年报考与其它</a>
+	</body>
 </html>
